Add Vector API Test